--------------------------------------------------------------------------------
Changes for 2.3.0

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.2.1rc1

New features:
..F....... [ZBXNEXT-2016] changed the housekeeping settings to allow overriding item-level history and trend storage period if internal housekeeping is disabled (Pavels)
..F....... [ZBXNEXT-2016] removed the ZBX_HISTORY_DATA_UPKEEP constant (Pavels)
....I..... [ZBXNEXT-1256] changed example directory size user parameter to return bytes (Richlv)
..F....... [ZBX-7250] made gettext an optional feature for the frontend (Pavels)
A.F....... [ZBX-1357] updated Brazilian Portuguese, French, Italian, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)

Bug fixes:
..F....... [ZBX-7340] fixed incorrect error messages when imported objects reference unexisting objects (Pavels)
A.F....... [ZBX-7445] fixed frontend redundant call of history (Eduard)
..F....... [ZBX-7277] made item selection helper translatable (Ivo)
.......PS. [ZBX-6160] fixed memory leak in configuration syncer process (Sasha)
.......PS. [ZBX-6160] fixed "ORA-01000: maximum open cursors exceeded" error (Sasha)
..F....... [ZBX-7354] fixed resetting linked template list when trying to add template with empty field (Ivo)
.......PS. [ZBX-7360] fixed maximum IPMI sensor ID length; thanks to OpenIPMI author Corey Minyard (Andris, asaveljevs)
........S. [ZBX-7400] fixed possible server crash when processing trigger functions with text or log items with Oracle backend (Sasha)
........S. [ZBX-7400] fixed possible server crash when sending messages with Oracle backend (Sasha)
........S. [ZBX-7326] improved escalator idle time calculations and statistics reporting (wiper)
..F....... [ZBX-7355] fixed various prototype confirmation messages (Ivo)