@@ -2,6 +2,7 @@
 Changes for 2.3.0
 
 New features:
+A......... [ZBX-7345] removed deprecated API features (Pavels)
 
 Bug fixes:
 
